2010-11-02 Roman
- !!!!:SYS, DAQ.JavaLikeCalc, UI.QTCfg, UI.VCAEngine, UI.Vision: The syntax highlight API is added.
- SYS.XMLNode: Copy constructor is added.
- FIX:SYS: Start scripts "openscada_start" and "openscada_demo" and "openscada_demo_local" is fixed for direct bash call.
- FIX:DB.MySQL: Date and time store format is changed to UTC.


2010-10-24 Roman 0.7.0
- FIX:DemoDB: Config file is fixed at field value: <prm id="Workdir">../share/openscada</prm>.
- DOC: FAQ and TODO is updated
- SYS: RPM build specification files is updated for field "Summary" translation add.
- TModSchedul, DAQ.AMRDevs, DAQ.BlockCalc, DAQ.DAQGate, DAQ.DCON, DAQ.ModBus, DAQ.OPC_UA, DAQ.SNMP, DAQ.SoundCards,
    Protoco.HTTP, Protocol.SelfSystem, Transport.SSL, Transport.Serial, Transport.Sockets, UI.Vision, UI.WebVision:
	Borders set for some integer and real values.


2010-10-23 Roman
- SYS: The main splash image is updated for Long Term Support allow for version 0.7.0.
- SYS: Debian files is updated for build packages to version 0.7.0.
- DemoDB: Demo DB is final updated for version 0.7.0 and fix some bugs.
- SYS: For function TMess::setMessLevel() set border [0;5] to values. For function TSYS::setSavePeriod() set border [0;-] to values.
- FIX:DAQ.DAQGate: Crash at set sync period to zero is fixed.
- FIX:DAQ.OPC_UA: Browse items limit is free from 100 items.
- Transport.SSL: Set borders to function's values: setBufLen() - [1;1024], setMaxFork() - [1;1000],
    setKeepAliveCon() - [0;-] and setKeepAliveTm() - [0;-];
- FIX:UI.QTCfg: Tree collapsing is disabled at hosts update.
- UI.WebVision: Hold cursor at current time is added for primitive "Diagram".
- SYS: Release 0.7.0 previews and test protocol is added.


2010-10-22 Roman
- DAQ: Start subsystem Archive at DAQ start on modules reload, for archives links restore.
- ModSched: SO library detach order is changed to stop all modules and for next it delete.
- DAQ: TParamContr preDisable() procedure is changed for stop linked archives.